--- a/index_page.css
+++ b/index_page.css
@@ -35,11 +35,11 @@
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #9C27B0;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #9C27B0;
 }
 
 input:checked + .slider:before {
