pushing from windows

--- a/css/index_page.css
+++ b/css/index_page.css
@@ -70,3 +70,22 @@ input:checked + .slider:before {
   float:left;
   clear: left;
 }
+
+#interruptionerror{
+  color:red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
